# pptranspog

./: .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
PPTRANS/: CMakeLists.txt  optionPrelude.cpp  optionPrelude.h
PPTRANSSMT/: CMakeLists.txt  ppTrans.cpp  ppTrans.h  ppTransIncr.cpp  ppTransIncr.h  ppTransNonIncr.cpp  ppTransNonIncr.h  ppTransSmt.cpp  theorySMTLIB.cpp  theorySMTLIB.h
PPTransTPTP/: CMakeLists.txt  ppTransConsoleTPTP.cpp  ppTransTPTP.cpp  ppTransTPTP.h  ppTransTPTPNonIncr.cpp  ppTransTPTPNonIncr.h  theoryTPTP.cpp  theoryTPTP.h
test/: CMakeLists.txt  README.md  do_ctest  setENV.model
test/input/test000/: M_enum.mch  M_enum.pog
test/input/test001/: M_succ_pred.mch  M_succ_pred.pog
test/input/test002/: M_sigma_pi.mch  M_sigma_pi.pog
test/input/test003/: M_mem_0.mch  M_mem_0.pog
test/input/test004/: M_mem_1.mch  M_mem_1.pog
test/input/test005/: M_mem_2.mch  M_mem_2.pog
test/input/test006/: M_mem_3.mch  M_mem_3.pog
test/input/test007/: M_struct_rec.mch  M_struct_rec.pog
test/input/test008/: M_relation_eq.mch  M_relation_eq.pog
test/input/test009/: M_first_last.mch  M_first_last.pog
test/input/test010/: M_size.mch  M_size.pog
test/input/test011/: M_card.mch  M_card.pog
test/input/test012/: M_min_max.mch  M_min_max.pog
test/input/test013/: M_bool_eq.mch  M_bool_eq.pog
test/input/test014/: M_bool_true_false.mch  M_bool_true_false.pog
test/input/test015/: M_bool_eq_var.mch  M_bool_eq_var.pog
test/input/test016/: M_prod_eq.mch  M_prod_eq.pog
test/input/test017/: M_set_eq.mch  M_set_eq.pog
test/input/test018/: M_rec_eq.mch  M_rec_eq.pog
test/input/test019/: M_strict_incl.mch  M_strict_incl.pog
test/input/test020/: M_incl.mch  M_incl.pog
test/input/test021/: M_empty_set.mch  M_empty_set.pog
test/input/test022/: M_empty_seq.mch  M_empty_seq.pog
test/input/test023/: M_INTEGER.mch  M_INTEGER.pog
test/input/test024/: M_BOOL.mch  M_BOOL.pog
test/input/test025/: M_REAL.mch  M_REAL.pog
test/input/test026/: M_STRING.mch  M_STRING.pog
test/input/test027/: M_NATURAL.mch  M_NATURAL.pog
test/input/test028/: M_NATURAL1.mch  M_NATURAL1.pog
test/input/test029/: M_INT.mch  M_INT.pog
test/input/test030/: M_NAT.mch  M_NAT.pog
test/input/test031/: M_NAT1.mch  M_NAT1.pog
test/input/test032/: M_FIN_FIN1.mch  M_FIN_FIN1.pog
test/input/test033/: M_POW_POW1.mch  M_POW_POW1.pog
test/input/test034/: M_union.mch  M_union.pog
test/input/test035/: M_inter.mch  M_inter.pog
test/input/test036/: M_closure.mch  M_closure.pog
test/input/test037/: M_closure1.mch  M_closure1.pog
test/input/test038/: M_ran_dom.mch  M_ran_dom.pog
test/input/test039/: M_seq.mch  M_seq.pog
test/input/test040/: M_seq1.mch  M_seq1.pog
test/input/test041/: M_iseq.mch  M_iseq.pog
test/input/test042/: M_iseq1.mch  M_iseq1.pog
test/input/test043/: M_perm.mch  M_perm.pog
test/input/test044/: M_reverse.mch  M_reverse.pog
test/input/test045/: M_id.mch  M_id.pog
test/input/test046/: M_fnc.mch  M_fnc.pog
test/input/test047/: M_rel.mch  M_rel.pog
test/input/test048/: M_front.mch  M_front.pog
test/input/test049/: M_tail.mch  M_tail.pog
test/input/test050/: M_conc_succession.mch  M_conc_succession.pog
test/input/test051/: M_mem_first_last.mch  M_mem_first_last.pog
test/input/test052/: M_ext_set.mch  M_ext_set.pog
test/input/test053/: M_ext_seq.mch  M_ext_seq.pog
test/input/test054/: M_reverse.mch  M_reverse.pog
test/input/test055/: M_interval.mch  M_interval.pog
test/input/test056/: M_set_difference.mch  M_set_difference.pog
test/input/test057/: M_set_union.mch  M_set_union.pog
test/input/test058/: M_set_intersection.mch  M_set_intersection.pog
test/input/test059/: M_rel_set.mch  M_rel_set.pog
test/input/test060/: M_image.mch  M_image.pog
test/output/: check_references.sh
(+875 files in other folders)
